test/libsolidity/syntaxTests/more_than_256_declarationerrors.sol
contract C {
  function f() public {
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
    b = 5;
  }
}
// ----
// DeclarationError 7576: (41-42='b'): Undeclared identifier.
// DeclarationError 7576: (52-53='b'): Undeclared identifier.
// DeclarationError 7576: (63-64='b'): Undeclared identifier.
// DeclarationError 7576: (74-75='b'): Undeclared identifier.
// DeclarationError 7576: (85-86='b'): Undeclared identifier.
// DeclarationError 7576: (96-97='b'): Undeclared identifier.
// DeclarationError 7576: (107-108='b'): Undeclared identifier.
// DeclarationError 7576: (118-119='b'): Undeclared identifier.
// DeclarationError 7576: (129-130='b'): Undeclared identifier.
// DeclarationError 7576: (140-141='b'): Undeclared identifier.
// DeclarationError 7576: (151-152='b'): Undeclared identifier.
// DeclarationError 7576: (162-163='b'): Undeclared identifier.
// DeclarationError 7576: (173-174='b'): Undeclared identifier.
// DeclarationError 7576: (184-185='b'): Undeclared identifier.
// DeclarationError 7576: (195-196='b'): Undeclared identifier.
// DeclarationError 7576: (206-207='b'): Undeclared identifier.
// DeclarationError 7576: (217-218='b'): Undeclared identifier.
// DeclarationError 7576: (228-229='b'): Undeclared identifier.
// DeclarationError 7576: (239-240='b'): Undeclared identifier.
// DeclarationError 7576: (250-251='b'): Undeclared identifier.
// DeclarationError 7576: (261-262='b'): Undeclared identifier.
// DeclarationError 7576: (272-273='b'): Undeclared identifier.
// DeclarationError 7576: (283-284='b'): Undeclared identifier.
// DeclarationError 7576: (294-295='b'): Undeclared identifier.
// DeclarationError 7576: (305-306='b'): Undeclared identifier.
// DeclarationError 7576: (316-317='b'): Undeclared identifier.
// DeclarationError 7576: (327-328='b'): Undeclared identifier.
// DeclarationError 7576: (338-339='b'): Undeclared identifier.
// DeclarationError 7576: (349-350='b'): Undeclared identifier.
// DeclarationError 7576: (360-361='b'): Undeclared identifier.
// DeclarationError 7576: (371-372='b'): Undeclared identifier.
// DeclarationError 7576: (382-383='b'): Undeclared identifier.
// DeclarationError 7576: (393-394='b'): Undeclared identifier.
// DeclarationError 7576: (404-405='b'): Undeclared identifier.
// DeclarationError 7576: (415-416='b'): Undeclared identifier.
// DeclarationError 7576: (426-427='b'): Undeclared identifier.
// DeclarationError 7576: (437-438='b'): Undeclared identifier.
// DeclarationError 7576: (448-449='b'): Undeclared identifier.
// DeclarationError 7576: (459-460='b'): Undeclared identifier.
// DeclarationError 7576: (470-471='b'): Undeclared identifier.
// DeclarationError 7576: (481-482='b'): Undeclared identifier.
// DeclarationError 7576: (492-493='b'): Undeclared identifier.
// DeclarationError 7576: (503-504='b'): Undeclared identifier.
// DeclarationError 7576: (514-515='b'): Undeclared identifier.
// DeclarationError 7576: (525-526='b'): Undeclared identifier.
// DeclarationError 7576: (536-537='b'): Undeclared identifier.
// DeclarationError 7576: (547-548='b'): Undeclared identifier.
// DeclarationError 7576: (558-559='b'): Undeclared identifier.
// DeclarationError 7576: (569-570='b'): Undeclared identifier.
// DeclarationError 7576: (580-581='b'): Undeclared identifier.
// DeclarationError 7576: (591-592='b'): Undeclared identifier.
// DeclarationError 7576: (602-603='b'): Undeclared identifier.
// DeclarationError 7576: (613-614='b'): Undeclared identifier.
// DeclarationError 7576: (624-625='b'): Undeclared identifier.
// DeclarationError 7576: (635-636='b'): Undeclared identifier.
// DeclarationError 7576: (646-647='b'): Undeclared identifier.
// DeclarationError 7576: (657-658='b'): Undeclared identifier.
// DeclarationError 7576: (668-669='b'): Undeclared identifier.
// DeclarationError 7576: (679-680='b'): Undeclared identifier.
// DeclarationError 7576: (690-691='b'): Undeclared identifier.
// DeclarationError 7576: (701-702='b'): Undeclared identifier.
// DeclarationError 7576: (712-713='b'): Undeclared identifier.
// DeclarationError 7576: (723-724='b'): Undeclared identifier.
// DeclarationError 7576: (734-735='b'): Undeclared identifier.
// DeclarationError 7576: (745-746='b'): Undeclared identifier.
// DeclarationError 7576: (756-757='b'): Undeclared identifier.
// DeclarationError 7576: (767-768='b'): Undeclared identifier.
// DeclarationError 7576: (778-779='b'): Undeclared identifier.
// DeclarationError 7576: (789-790='b'): Undeclared identifier.
// DeclarationError 7576: (800-801='b'): Undeclared identifier.
// DeclarationError 7576: (811-812='b'): Undeclared identifier.
// DeclarationError 7576: (822-823='b'): Undeclared identifier.
// DeclarationError 7576: (833-834='b'): Undeclared identifier.
// DeclarationError 7576: (844-845='b'): Undeclared identifier.
// DeclarationError 7576: (855-856='b'): Undeclared identifier.
// DeclarationError 7576: (866-867='b'): Undeclared identifier.
// DeclarationError 7576: (877-878='b'): Undeclared identifier.
// DeclarationError 7576: (888-889='b'): Undeclared identifier.
// DeclarationError 7576: (899-900='b'): Undeclared identifier.
// DeclarationError 7576: (910-911='b'): Undeclared identifier.
// DeclarationError 7576: (921-922='b'): Undeclared identifier.
// DeclarationError 7576: (932-933='b'): Undeclared identifier.
// DeclarationError 7576: (943-944='b'): Undeclared identifier.
// DeclarationError 7576: (954-955='b'): Undeclared identifier.
// DeclarationError 7576: (965-966='b'): Undeclared identifier.
// DeclarationError 7576: (976-977='b'): Undeclared identifier.
// DeclarationError 7576: (987-988='b'): Undeclared identifier.
// DeclarationError 7576: (998-999='b'): Undeclared identifier.
// DeclarationError 7576: (1009-1010='b'): Undeclared identifier.
// DeclarationError 7576: (1020-1021='b'): Undeclared identifier.
// DeclarationError 7576: (1031-1032='b'): Undeclared identifier.
// DeclarationError 7576: (1042-1043='b'): Undeclared identifier.
// DeclarationError 7576: (1053-1054='b'): Undeclared identifier.
// DeclarationError 7576: (1064-1065='b'): Undeclared identifier.
// DeclarationError 7576: (1075-1076='b'): Undeclared identifier.
// DeclarationError 7576: (1086-1087='b'): Undeclared identifier.
// DeclarationError 7576: (1097-1098='b'): Undeclared identifier.
// DeclarationError 7576: (1108-1109='b'): Undeclared identifier.
// DeclarationError 7576: (1119-1120='b'): Undeclared identifier.
// DeclarationError 7576: (1130-1131='b'): Undeclared identifier.
// DeclarationError 7576: (1141-1142='b'): Undeclared identifier.
// DeclarationError 7576: (1152-1153='b'): Undeclared identifier.
// DeclarationError 7576: (1163-1164='b'): Undeclared identifier.
// DeclarationError 7576: (1174-1175='b'): Undeclared identifier.
// DeclarationError 7576: (1185-1186='b'): Undeclared identifier.
// DeclarationError 7576: (1196-1197='b'): Undeclared identifier.
// DeclarationError 7576: (1207-1208='b'): Undeclared identifier.
// DeclarationError 7576: (1218-1219='b'): Undeclared identifier.
// DeclarationError 7576: (1229-1230='b'): Undeclared identifier.
// DeclarationError 7576: (1240-1241='b'): Undeclared identifier.
// DeclarationError 7576: (1251-1252='b'): Undeclared identifier.
// DeclarationError 7576: (1262-1263='b'): Undeclared identifier.
// DeclarationError 7576: (1273-1274='b'): Undeclared identifier.
// DeclarationError 7576: (1284-1285='b'): Undeclared identifier.
// DeclarationError 7576: (1295-1296='b'): Undeclared identifier.
// DeclarationError 7576: (1306-1307='b'): Undeclared identifier.
// DeclarationError 7576: (1317-1318='b'): Undeclared identifier.
// DeclarationError 7576: (1328-1329='b'): Undeclared identifier.
// DeclarationError 7576: (1339-1340='b'): Undeclared identifier.
// DeclarationError 7576: (1350-1351='b'): Undeclared identifier.
// DeclarationError 7576: (1361-1362='b'): Undeclared identifier.
// DeclarationError 7576: (1372-1373='b'): Undeclared identifier.
// DeclarationError 7576: (1383-1384='b'): Undeclared identifier.
// DeclarationError 7576: (1394-1395='b'): Undeclared identifier.
// DeclarationError 7576: (1405-1406='b'): Undeclared identifier.
// DeclarationError 7576: (1416-1417='b'): Undeclared identifier.
// DeclarationError 7576: (1427-1428='b'): Undeclared identifier.
// DeclarationError 7576: (1438-1439='b'): Undeclared identifier.
// DeclarationError 7576: (1449-1450='b'): Undeclared identifier.
// DeclarationError 7576: (1460-1461='b'): Undeclared identifier.
// DeclarationError 7576: (1471-1472='b'): Undeclared identifier.
// DeclarationError 7576: (1482-1483='b'): Undeclared identifier.
// DeclarationError 7576: (1493-1494='b'): Undeclared identifier.
// DeclarationError 7576: (1504-1505='b'): Undeclared identifier.
// DeclarationError 7576: (1515-1516='b'): Undeclared identifier.
// DeclarationError 7576: (1526-1527='b'): Undeclared identifier.
// DeclarationError 7576: (1537-1538='b'): Undeclared identifier.
// DeclarationError 7576: (1548-1549='b'): Undeclared identifier.
// DeclarationError 7576: (1559-1560='b'): Undeclared identifier.
// DeclarationError 7576: (1570-1571='b'): Undeclared identifier.
// DeclarationError 7576: (1581-1582='b'): Undeclared identifier.
// DeclarationError 7576: (1592-1593='b'): Undeclared identifier.
// DeclarationError 7576: (1603-1604='b'): Undeclared identifier.
// DeclarationError 7576: (1614-1615='b'): Undeclared identifier.
// DeclarationError 7576: (1625-1626='b'): Undeclared identifier.
// DeclarationError 7576: (1636-1637='b'): Undeclared identifier.
// DeclarationError 7576: (1647-1648='b'): Undeclared identifier.
// DeclarationError 7576: (1658-1659='b'): Undeclared identifier.
// DeclarationError 7576: (1669-1670='b'): Undeclared identifier.
// DeclarationError 7576: (1680-1681='b'): Undeclared identifier.
// DeclarationError 7576: (1691-1692='b'): Undeclared identifier.
// DeclarationError 7576: (1702-1703='b'): Undeclared identifier.
// DeclarationError 7576: (1713-1714='b'): Undeclared identifier.
// DeclarationError 7576: (1724-1725='b'): Undeclared identifier.
// DeclarationError 7576: (1735-1736='b'): Undeclared identifier.
// DeclarationError 7576: (1746-1747='b'): Undeclared identifier.
// DeclarationError 7576: (1757-1758='b'): Undeclared identifier.
// DeclarationError 7576: (1768-1769='b'): Undeclared identifier.
// DeclarationError 7576: (1779-1780='b'): Undeclared identifier.
// DeclarationError 7576: (1790-1791='b'): Undeclared identifier.
// DeclarationError 7576: (1801-1802='b'): Undeclared identifier.
// DeclarationError 7576: (1812-1813='b'): Undeclared identifier.
// DeclarationError 7576: (1823-1824='b'): Undeclared identifier.
// DeclarationError 7576: (1834-1835='b'): Undeclared identifier.
// DeclarationError 7576: (1845-1846='b'): Undeclared identifier.
// DeclarationError 7576: (1856-1857='b'): Undeclared identifier.
// DeclarationError 7576: (1867-1868='b'): Undeclared identifier.
// DeclarationError 7576: (1878-1879='b'): Undeclared identifier.
// DeclarationError 7576: (1889-1890='b'): Undeclared identifier.
// DeclarationError 7576: (1900-1901='b'): Undeclared identifier.
// DeclarationError 7576: (1911-1912='b'): Undeclared identifier.
// DeclarationError 7576: (1922-1923='b'): Undeclared identifier.
// DeclarationError 7576: (1933-1934='b'): Undeclared identifier.
// DeclarationError 7576: (1944-1945='b'): Undeclared identifier.
// DeclarationError 7576: (1955-1956='b'): Undeclared identifier.
// DeclarationError 7576: (1966-1967='b'): Undeclared identifier.
// DeclarationError 7576: (1977-1978='b'): Undeclared identifier.
// DeclarationError 7576: (1988-1989='b'): Undeclared identifier.
// DeclarationError 7576: (1999-2000='b'): Undeclared identifier.
// DeclarationError 7576: (2010-2011='b'): Undeclared identifier.
// DeclarationError 7576: (2021-2022='b'): Undeclared identifier.
// DeclarationError 7576: (2032-2033='b'): Undeclared identifier.
// DeclarationError 7576: (2043-2044='b'): Undeclared identifier.
// DeclarationError 7576: (2054-2055='b'): Undeclared identifier.
// DeclarationError 7576: (2065-2066='b'): Undeclared identifier.
// DeclarationError 7576: (2076-2077='b'): Undeclared identifier.
// DeclarationError 7576: (2087-2088='b'): Undeclared identifier.
// DeclarationError 7576: (2098-2099='b'): Undeclared identifier.
// DeclarationError 7576: (2109-2110='b'): Undeclared identifier.
// DeclarationError 7576: (2120-2121='b'): Undeclared identifier.
// DeclarationError 7576: (2131-2132='b'): Undeclared identifier.
// DeclarationError 7576: (2142-2143='b'): Undeclared identifier.
// DeclarationError 7576: (2153-2154='b'): Undeclared identifier.
// DeclarationError 7576: (2164-2165='b'): Undeclared identifier.
// DeclarationError 7576: (2175-2176='b'): Undeclared identifier.
// DeclarationError 7576: (2186-2187='b'): Undeclared identifier.
// DeclarationError 7576: (2197-2198='b'): Undeclared identifier.
// DeclarationError 7576: (2208-2209='b'): Undeclared identifier.
// DeclarationError 7576: (2219-2220='b'): Undeclared identifier.
// DeclarationError 7576: (2230-2231='b'): Undeclared identifier.
// DeclarationError 7576: (2241-2242='b'): Undeclared identifier.
// DeclarationError 7576: (2252-2253='b'): Undeclared identifier.
// DeclarationError 7576: (2263-2264='b'): Undeclared identifier.
// DeclarationError 7576: (2274-2275='b'): Undeclared identifier.
// DeclarationError 7576: (2285-2286='b'): Undeclared identifier.
// DeclarationError 7576: (2296-2297='b'): Undeclared identifier.
// DeclarationError 7576: (2307-2308='b'): Undeclared identifier.
// DeclarationError 7576: (2318-2319='b'): Undeclared identifier.
// DeclarationError 7576: (2329-2330='b'): Undeclared identifier.
// DeclarationError 7576: (2340-2341='b'): Undeclared identifier.
// DeclarationError 7576: (2351-2352='b'): Undeclared identifier.
// DeclarationError 7576: (2362-2363='b'): Undeclared identifier.
// DeclarationError 7576: (2373-2374='b'): Undeclared identifier.
// DeclarationError 7576: (2384-2385='b'): Undeclared identifier.
// DeclarationError 7576: (2395-2396='b'): Undeclared identifier.
// DeclarationError 7576: (2406-2407='b'): Undeclared identifier.
// DeclarationError 7576: (2417-2418='b'): Undeclared identifier.
// DeclarationError 7576: (2428-2429='b'): Undeclared identifier.
// DeclarationError 7576: (2439-2440='b'): Undeclared identifier.
// DeclarationError 7576: (2450-2451='b'): Undeclared identifier.
// DeclarationError 7576: (2461-2462='b'): Undeclared identifier.
// DeclarationError 7576: (2472-2473='b'): Undeclared identifier.
// DeclarationError 7576: (2483-2484='b'): Undeclared identifier.
// DeclarationError 7576: (2494-2495='b'): Undeclared identifier.
// DeclarationError 7576: (2505-2506='b'): Undeclared identifier.
// DeclarationError 7576: (2516-2517='b'): Undeclared identifier.
// DeclarationError 7576: (2527-2528='b'): Undeclared identifier.
// DeclarationError 7576: (2538-2539='b'): Undeclared identifier.
// DeclarationError 7576: (2549-2550='b'): Undeclared identifier.
// DeclarationError 7576: (2560-2561='b'): Undeclared identifier.
// DeclarationError 7576: (2571-2572='b'): Undeclared identifier.
// DeclarationError 7576: (2582-2583='b'): Undeclared identifier.
// DeclarationError 7576: (2593-2594='b'): Undeclared identifier.
// DeclarationError 7576: (2604-2605='b'): Undeclared identifier.
// DeclarationError 7576: (2615-2616='b'): Undeclared identifier.
// DeclarationError 7576: (2626-2627='b'): Undeclared identifier.
// DeclarationError 7576: (2637-2638='b'): Undeclared identifier.
// DeclarationError 7576: (2648-2649='b'): Undeclared identifier.
// DeclarationError 7576: (2659-2660='b'): Undeclared identifier.
// DeclarationError 7576: (2670-2671='b'): Undeclared identifier.
// DeclarationError 7576: (2681-2682='b'): Undeclared identifier.
// DeclarationError 7576: (2692-2693='b'): Undeclared identifier.
// DeclarationError 7576: (2703-2704='b'): Undeclared identifier.
// DeclarationError 7576: (2714-2715='b'): Undeclared identifier.
// DeclarationError 7576: (2725-2726='b'): Undeclared identifier.
// DeclarationError 7576: (2736-2737='b'): Undeclared identifier.
// DeclarationError 7576: (2747-2748='b'): Undeclared identifier.
// DeclarationError 7576: (2758-2759='b'): Undeclared identifier.
// DeclarationError 7576: (2769-2770='b'): Undeclared identifier.
// DeclarationError 7576: (2780-2781='b'): Undeclared identifier.
// DeclarationError 7576: (2791-2792='b'): Undeclared identifier.
// DeclarationError 7576: (2802-2803='b'): Undeclared identifier.
// DeclarationError 7576: (2813-2814='b'): Undeclared identifier.
// DeclarationError 7576: (2824-2825='b'): Undeclared identifier.
// DeclarationError 7576: (2835-2836='b'): Undeclared identifier.
// DeclarationError 7576: (2846-2847='b'): Undeclared identifier.
// Warning 4013: There are more than 256 errors. Aborting.
